<?xml version="1.0"?>
<package format="2">
  <name>uwb_signal_processing</name>
  <version>0.0.0</version>
  <description>The uwb_signal_processing package</description>

  <maintainer email="xhhh@todo.todo">xhhh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>catkin_simple</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nlink_parser</build_depend>
  <exec_depend>nlink_parser</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
